--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -10,7 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Photos\" />
+    <Folder Include="Photos\" />    
+    <Content Include="Photos\**" CopyToPublishDirectory="PreserveNewest"/>
   </ItemGroup>
 
 
