Fixing the connection string from local to cloud

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "EmployeeAppCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EmployeeDB; Integrated Security=true"
-  },
+    "EmployeeAppCon": "Server=webappdatabase1.database.windows.net,1433;Initial Catalog=WebAppDatabase;Persist Security Info=False;User ID=merai;Password=Z56hpdpm.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+ },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
